Kubernetes/k8s-mesh/k8s/app/config-map.yml
apiVersion: v1
kind: ConfigMap
metadata:
  name: app-envoy-config
data:
  envoy.yaml: |-
    admin:
      access_log_path: /dev/stdout
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901
    static_resources:
      listeners:
        - name: app.listener
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8000
          filter_chains:
            - filters:
              - name: app.listener.filter
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                  stat_prefix: app.listener.filter.http
                  access_log:
                    - name: app.filter.log.file
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                        path: /dev/stdout
                  route_config:
                    name: app.listener.filter.route
                    virtual_hosts:
                      - name: app.listener.route.service
                        domains:
                          - "*"
                        routes:
                          - match:
                              prefix: "/"
                            route:
                              cluster: app.cluster
                  http_filters:
                    - name: envoy.filters.http.router
                      typed_config: {}
        - name: db.listener
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 6379
          filter_chains:
            - filters:
              - name: db.listener.proxy
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.redis_proxy.v3.RedisProxy
                  stat_prefix: db.listener.proxy.redis
                  prefix_routes:
                    routes:
                      - cluster: redis.cluster
                  settings:
                    op_timeout: 1s
      clusters:
        - name: app.cluster
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          hosts:
            - socket_address:
                address: 127.0.0.1
                port_value: 8080
        - name: redis.cluster
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          hosts:
            - socket_address:
                address: redis-service
                port_value: 8000
