Kubernetes/k8s-mesh/k8s/app/internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  clusterIP: None
  selector:
    layer: app-node
  ports:
    - protocol: TCP
      port: 8000
      targetPort: app-port
